# mictory

./: .dockerignore  .gitignore  .npmrc  README.md  apollo.config.js  compose-dev.yaml  docker-compose.yaml  graphql.config.json  package.json  pnpm-lock.yaml
.github/: docs-deploy.yml
actix-server/: .env  .gitignore  Cargo.toml  test.html
actix-server/migration/: Cargo.toml
actix-server/migration/src/: lib.rs  m20230130_162955_room.rs  m20230130_174041_room_user.rs  m20230130_174639_server.rs  m20230130_174920_user.rs  m20230130_175143_user_nickname.rs  m20230130_175316_user_server.rs
actix-server/model/: Cargo.toml
actix-server/model/src/: lib.rs  prelude.rs  room.rs  room_user.rs  user.rs
actix-server/src/: engine.rs  main.rs  websocket.rs
actix-server/src/api/: middleware.rs  mod.rs  room_api.rs  server_api.rs  user_api.rs
actix-server/src/business/: mod.rs  server_business.rs
actix-server/src/controller/: mod.rs  room_controller.rs  server_controller.rs
actix-server/src/engine/: engine.rs  mod.rs  room.rs  rtc.rs  websocket.rs
actix-server/src/engine/rtc/: message.rs  mod.rs  session.rs
actix-server/src/model/: mod.rs  prelude.rs  room.rs  room_user.rs  server.rs  user.rs  user_nickname.rs  user_server.rs
actix-server/static/: index.html
actix-server/static-demo/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
actix-server/static-demo/src/: App.vue  main.ts  session.ts  stores.ts  style.css
actix-server/static/assets/: index-670ae422.js  index-8a9dba1f.css
client/: electron-builder.yml  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.cjs
docs/: index.md
electron-client/: .eslintrc.cjs  .prettierrc.yaml  README.md  dev-app-update.yml  electron-builder.yml  package.json  pnpm-lock.yaml  (+1 more)
(+468 files in other folders)
