[package]
name = "webrtc-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-web-static-files = "4.0.0"
by_address = "1.1.0"
env_logger = "0.10.0"
log = "0.4.17"
nanoid = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.91"
static-files = "0.2.3"
tokio = "1.24.1"
webrtc = "0.6.0"

[build-dependencies]
static-files = "0.2.3"
