[package]
name = "webrtc-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-web-static-files = "4.0.0"
by_address = "1.1.0"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures = "0.3.25"
jwt-simple = "0.11.3"
log = "0.4.17"
nanoid = "0.4.0"
sea-orm = { version = "0.10.7", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros"] }
serde = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.6"
static-files = "0.2.3"
tokio = "1.24.1"
validator = { version = "0.16.0", features = ["derive"] }
webrtc = "0.6.0"

[build-dependencies]
static-files = "0.2.3"
